--- a/ImplementersToolbox/App.config
+++ b/ImplementersToolbox/App.config
@@ -1,36 +1,34 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="ImplementersToolbox.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      <section name="ImplementersToolbox.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
     </sectionGroup>
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
   <userSettings>
     <ImplementersToolbox.Properties.Settings>
       <setting name="PathWin" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="PathOriginal" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="SendKeyDelay" serializeAs="String">
         <value>150</value>
       </setting>
       <setting name="Application" serializeAs="Xml">
         <value>
-          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <string>[CLASS:Transparent Windows Client]</string>
           </ArrayOfString>
         </value>
       </setting>
       <setting name="KeyCombo" serializeAs="Xml">
         <value>
-          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <string>GST Number(38, 6): {TAB 6}{3}{8}{TAB}{6}{TAB 4}{Down}</string>
             <string>GST Varchar(30): {TAB 5}{3}{0}{TAB 5}{Down}</string>
             <string>GST Varchar(500): {TAB 5}{5}{0}{0}{TAB 5}{Down}</string>
@@ -63,7 +61,7 @@
   </userSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <probing privatePath="Libraries" />
+      <probing privatePath="Libraries"/>
     </assemblyBinding>
   </runtime>
 </configuration>
